Fixes
Fixed issue with search result not showing onChange.

Fixed issue with navbar in smaller devices.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -176,22 +176,42 @@ iframe {
     color: white;
 }
 
-.banner-navbar-menu p {
-    margin-left: 1rem;
+.banner-navbar-menu-default {
+    margin-left: 0.7rem;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     padding: 0.4rem 0.4rem 0.4rem 0.4rem;
     border-radius: 5px;
     border: 1px solid transparent;
+    text-shadow: 2px 2px 10px #282726;
 }
 
-.banner-navbar-menu p:hover {
+.banner-navbar-menu-active {
     background-color: rgba(255, 255, 255, 0.7);
     backdrop-filter: blur(2px);
     color: #282726;
     margin-top: 0;
+    padding: 0.4rem 0.4rem 0.4rem 0.4rem;
     padding-top: 1.5rem;
+    border-radius: 5px;
+    /* text-shadow: 2px 2px 10px #282726; */
     border: 1px solid transparent;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+}
+
+.banner-navbar-menu-default:hover {
+    background-color: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(2px);
+    color: #282726;
+    margin-top: 0;
+    padding: 0.4rem 0.4rem 0.4rem 0.4rem;
+    padding-top: 1.5rem;
+    border-radius: 5px;
+    /* text-shadow: 2px 2px 10px #282726; */
+    border: 1px solid transparent;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
 }
 
 /* .navbar,
@@ -347,8 +367,8 @@ iframe {
 
 .search-result-container {
     position: absolute;
-    top: 0rem;
-    left: 32.7%;
+    top: 3rem;
+    left: 27.6%;
     width: 35%;
     max-height: 50vh;
     /* height: auto; */
@@ -593,6 +613,7 @@ iframe {
 .recent-trailer {
     border-radius: 5px;
     height: 50vh;
+    padding: 0 0 0 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -616,8 +637,8 @@ iframe {
 
 .trailer-card-container-img {
     border-radius: 5px;
-    height: 90%;
-    width: 23rem;
+    height: 100%;
+    width: 45rem;
     position: relative;
 }
 
@@ -1251,8 +1272,6 @@ iframe {
 /* Youtube Component End */
 /* } */
 
-
-
 @media screen and (max-width: 1440px) {
 
     .navbar-logo a,
@@ -1290,9 +1309,6 @@ iframe {
     .banner-details p {
         font-size: 1rem;
     }
-}
-
-@media screen and (max-width: 1440px) {
 
     .section-zero-mp,
     .section {
@@ -1310,12 +1326,17 @@ iframe {
     }
 
     .search-result-container {
-        left: 27.3%;
+        top: 3rem;
+        left: 18.8%;
         width: 45%;
     }
 
     .banner-button {
         width: 90%;
+    }
+
+    .recent-trailer {
+        padding: 0 0 0 1rem;
     }
 
     .recent-trailer-div {
@@ -1324,6 +1345,11 @@ iframe {
 
     .card-container {
         height: 18rem;
+    }
+
+    .trailer-card-container-img {
+        width: 25rem;
+        height: 100%;
     }
 
 }
@@ -1348,8 +1374,8 @@ iframe {
 
     .search-result-container {
         top: 3rem;
-        left: 32%;
-        width: 45%;
+        left: 19.8%;
+        width: 36%;
     }
 
     .banner-navbar {
@@ -1421,6 +1447,10 @@ iframe {
         width: 90%;
     }
 
+    .recent-trailer {
+        padding: 0 0 0 1rem;
+    }
+
     .carousel-card-container {
         height: 12rem;
     }
@@ -1452,7 +1482,7 @@ iframe {
     }
 
     .trailer-card-container-img {
-        width: 21rem;
+        width: 25rem;
     }
 
     .recent-trailer-div::-webkit-scrollbar {
@@ -1523,6 +1553,10 @@ iframe {
         height: 100%;
     }
 
+    .banner-navbar-menu {
+        display: none;
+    }
+
     /* .banner-navbar-search-container {
         display: none;
     } */
@@ -1555,12 +1589,22 @@ iframe {
         cursor: pointer;
     }
 
+    .banner-navbar-search-container {
+        width: 70%;
+    }
+
     .dynamic-banner {
         height: 60vh;
     }
 
+    .recent-trailer-div {
+        padding: 0 0 0 1rem;
+        margin: unset;
+    }
+
     .search-result-container {
-        left: 33.3%;
+        left: 23.75%;
+        width: 63%;
     }
 
     .card-container {
@@ -1625,12 +1669,12 @@ iframe {
     }
 
     .banner-container {
-        height: 95vh;
+        height: 100vh;
     }
 
     .search-result-container {
         top: 3rem;
-        left: 26.2%;
+        left: 25.5%;
         width: 63%;
     }
 
@@ -1654,11 +1698,19 @@ iframe {
         font-weight: 200;
     }
 
+    .recent-trailer {
+        height: 35vh;
+    }
+
     .recent-trailer-div {
         height: 100%;
         width: 100%;
         margin: 0;
-        padding: 0;
+        padding: 0 0 0 1rem;
+    }
+
+    .trailer-card-container {
+        height: 75%;
     }
 
     .trailer-card-container-img {
@@ -1797,7 +1849,7 @@ iframe {
     }
 
     .off-canvas-menu {
-        width: 85%;
+        width: 100%;
     }
 
     .popular,
@@ -1814,8 +1866,12 @@ iframe {
         font-size: 0.8rem;
     }
 
-    .banner-navbar-logo a {
-        font-size: 1.2rem;
+    .banner-navbar-logo {
+        display: none;
+    }
+
+    .banner-navbar-search-container {
+        width: 90%;
     }
 
     .banner-details h2 {
@@ -1841,12 +1897,16 @@ iframe {
         height: 12rem;
     }
 
+    .trailer-card-container {
+        height: 100%;
+    }
+
     .recent-trailer {
         height: 30vh;
     }
 
     .recent-trailer-div {
-        width: 84%;
+        width: 85%;
         height: 80%;
     }
 
@@ -2007,7 +2067,7 @@ iframe {
     }
 
     .off-canvas-menu {
-        width: 90%;
+        width: 100%;
     }
 
     .dynamic-navbar-logo a {
@@ -2046,7 +2106,11 @@ iframe {
     .recent-trailer-div {
         width: 100%;
         height: 100%;
-        padding: 0;
+        padding: 0 0 0 1rem;
+    }
+
+    .trailer-card-container {
+        height: 70%;
     }
 
     .trailer-card-container-img {
@@ -2090,9 +2154,9 @@ iframe {
     }
 
     .trailer-card-container {
-        height: 60%;
+        height: 70%;
         width: 100%;
-        margin: 1rem;
+        margin: 0.5rem;
     }
 
     .trailer-card-container-img {
